# Example 1
add_executable(fplot_2d_1 fplot_2d_1.f90)
target_link_libraries(fplot_2d_1 fplot)

# Example 2
add_executable(fplot_2d_2 fplot_2d_2.f90)
target_link_libraries(fplot_2d_2 fplot)

# Example 3
add_executable(fplot_png_1 fplot_png_1.f90)
target_link_libraries(fplot_png_1 fplot)

# Example 4
add_executable(fplot_3d_1 fplot_3d_1.f90)
target_link_libraries(fplot_3d_1 fplot)

# Example 5
add_executable(fplot_surf_1 fplot_surf_1.f90)
target_link_libraries(fplot_surf_1 fplot)

# Example 6
add_executable(fplot_2d_3 fplot_2d_3.f90)
target_link_libraries(fplot_2d_3 fplot)

# Example 7
add_executable(fplot_2d_4 fplot_2d_4.f90)
target_link_libraries(fplot_2d_4 fplot)

# Example 8
add_executable(fplot_2d_5 fplot_2d_5.f90)
target_link_libraries(fplot_2d_5 fplot)

# Example 9
add_executable(fplot_2d_6 fplot_2d_6.f90)
target_link_libraries(fplot_2d_6 fplot)

# Example 10
add_executable(fplot_2d_7 fplot_2d_7.f90)
target_link_libraries(fplot_2d_7 fplot)

# Example 11
add_executable(fplot_2d_8 fplot_2d_8.f90)
target_link_libraries(fplot_2d_8 fplot)

# Example 12
add_executable(fplot_surf_2 fplot_surf_2.f90)
target_link_libraries(fplot_surf_2 fplot)

# Example 13
add_executable(fplot_surf_3 fplot_surf_3.f90)
target_link_libraries(fplot_surf_3 fplot)

# Example 14
add_executable(fplot_multi_1 fplot_multi_1.f90)
target_link_libraries(fplot_multi_1 fplot)

# Example 15
add_executable(fplot_multi_2 fplot_multi_2.f90)
target_link_libraries(fplot_multi_2 fplot)

# Example 16
add_executable(fplot_log_1 fplot_log_1.f90)
target_link_libraries(fplot_log_1 fplot)

# Example 17
add_executable(fplot_multi_3 fplot_multi_3.f90)
target_link_libraries(fplot_multi_3 fplot)

# Example 18
add_executable(fplot_err_1 fplot_err_1.f90)
target_link_libraries(fplot_err_1 fplot)

# Example 19
add_executable(fplot_clear_1 fplot_clear_1.f90)
target_link_libraries(fplot_clear_1 fplot)

# Example 20
add_executable(fplot_d2d_1 fplot_d2d_1.f90)
target_link_libraries(fplot_d2d_1 fplot)

# Example 21
add_executable(fplot_tri_surf_1 fplot_tri_surf_1.f90)
target_link_libraries(fplot_tri_surf_1 fplot)

# Example 22
add_executable(fplot_d2d_2 fplot_d2d_2.f90)
target_link_libraries(fplot_d2d_2 fplot)

# Example 23
add_executable(fplot_2d_clr_1 fplot_2d_clr_1.f90)
target_link_libraries(fplot_2d_clr_1 fplot)

# Example 24
add_executable(fplot_3d_clr_1 fplot_3d_clr_1.f90)
target_link_libraries(fplot_3d_clr_1 fplot)

# Example 25
add_executable(fplot_vector_1 fplot_vector_1.f90)
target_link_libraries(fplot_vector_1 fplot)

# Example 26
add_executable(fplot_vector_2 fplot_vector_2.f90)
target_link_libraries(fplot_vector_2 fplot)

# Example 27
add_executable(fplot_polar_1 fplot_polar_1.f90)
target_link_libraries(fplot_polar_1 fplot)

# Example 28
add_executable(fplot_2d_9 fplot_2d_9.f90)
target_link_libraries(fplot_2d_9 fplot)

# Example 29
add_executable(fplot_fill_1 fplot_fill_1.f90)
target_link_libraries(fplot_fill_1 fplot)

# Example 30
add_executable(fplot_fill_2 fplot_fill_2.f90)
target_link_libraries(fplot_fill_2 fplot)

# Example 31
add_executable(fplot_histogram_1 fplot_histogram_1.f90)
target_link_libraries(fplot_histogram_1 fplot)

# Example 32
add_executable(fplot_legend_1 fplot_legend_1.f90)
target_link_libraries(fplot_legend_1 fplot)

# Example 33 - Arrows (2D)
add_executable(fplot_2d_arrow fplot_2d_arrow.f90)
target_link_libraries(fplot_2d_arrow fplot)

# Example 34 - Custom Colormap
add_executable(fplot_custom_colormap fplot_custom_colormap.f90)
target_link_libraries(fplot_custom_colormap fplot)
target_link_libraries(fplot_custom_colormap forcolormap)