# Example 1
add_executable(generic_2d_plot generic_2d_plot.f90)
target_link_libraries(generic_2d_plot fplot)

# Example 2
add_executable(zero_axis_example zero_axis_example.f90)
target_link_libraries(zero_axis_example fplot)

# Example 3
add_executable(generic_3d_plot generic_3d_plot.f90)
target_link_libraries(generic_3d_plot fplot)

# Example 4
add_executable(wireframe_surface_example wireframe_surface_example.f90)
target_link_libraries(wireframe_surface_example fplot)

# Example 5
add_executable(png_plot_example png_plot_example.f90)
target_link_libraries(png_plot_example fplot)

# Example 6
add_executable(latex_plot_example latex_plot_example.f90)
target_link_libraries(latex_plot_example fplot)

# Example 7
add_executable(png_plot_example_2 png_plot_example_2.f90)
target_link_libraries(png_plot_example_2 fplot)

# Example 8
add_executable(save_to_file_example save_to_file_example.f90)
target_link_libraries(save_to_file_example fplot)

# Example 9
add_executable(plot_label_example plot_label_example.f90)
target_link_libraries(plot_label_example fplot)

# Example 10
add_executable(secondary_y_axis_example secondary_y_axis_example.f90)
target_link_libraries(secondary_y_axis_example fplot)

# Example 11
add_executable(surface_plot_example surface_plot_example.f90)
target_link_libraries(surface_plot_example fplot)

# Example 12
add_executable(surface_plot_example_2 surface_plot_example_2.f90)
target_link_libraries(surface_plot_example_2 fplot)

# Example 13
add_executable(multiplot_example_1 multiplot_example_1.f90)
target_link_libraries(multiplot_example_1 fplot)

# Example 14
add_executable(multiplot_example_2 multiplot_example_2.f90)
target_link_libraries(multiplot_example_2 fplot)

# Example 15
add_executable(log_scaling_example log_scaling_example.f90)
target_link_libraries(log_scaling_example fplot)

# Example 16
add_executable(multiplot_save_to_file_example multiplot_save_to_file_example.f90)
target_link_libraries(multiplot_save_to_file_example fplot)

# Example 17
add_executable(error_bar_example error_bar_example.f90)
target_link_libraries(error_bar_example fplot)

# Example 18
add_executable(clear_plot_example clear_plot_example.f90)
target_link_libraries(clear_plot_example fplot)

# Example 19
add_executable(triangulation_2d_example triangulation_2d_example.f90)
target_link_libraries(triangulation_2d_example fplot)

# Example 20
add_executable(triangle_mesh_surface_example triangle_mesh_surface_example.f90)
target_link_libraries(triangle_mesh_surface_example fplot)

# Example 21
add_executable(triangulation_2d_location_example triangulation_2d_location_example.f90)
target_link_libraries(triangulation_2d_location_example fplot)

# Example 22
add_executable(data_dependent_colors_2d data_dependent_colors_2d.f90)
target_link_libraries(data_dependent_colors_2d fplot)

# Example 23
add_executable(data_dependent_colors_3d data_dependent_colors_3d.f90)
target_link_libraries(data_dependent_colors_3d fplot)

# Example 24
add_executable(vector_plot_example vector_plot_example.f90)
target_link_libraries(vector_plot_example fplot)

# Example 25
add_executable(colored_vector_plot_example colored_vector_plot_example.f90)
target_link_libraries(colored_vector_plot_example fplot)

# Example 26
add_executable(polar_plot_example polar_plot_example.f90)
target_link_libraries(polar_plot_example fplot)

# Example 27
add_executable(square_axis_example square_axis_example.f90)
target_link_libraries(square_axis_example fplot)

# Example 28
add_executable(filled_curve_example filled_curve_example.f90)
target_link_libraries(filled_curve_example fplot)

# Example 29
add_executable(fill_between_curves_example fill_between_curves_example.f90)
target_link_libraries(fill_between_curves_example fplot)

# Example 30
add_executable(histogram_example histogram_example.f90)
target_link_libraries(histogram_example fplot)

# Example 31
add_executable(legend_example legend_example.f90)
target_link_libraries(legend_example fplot)

# Example 32
add_executable(arrow_example arrow_example.f90)
target_link_libraries(arrow_example fplot)

# Example 33
add_executable(custom_colormap_example custom_colormap_example.f90)
target_link_libraries(custom_colormap_example fplot)
target_link_libraries(custom_colormap_example forcolormap)

# Example 34
add_executable(variable_point_size_2d_example variable_point_size_2d_example.f90)
target_link_libraries(variable_point_size_2d_example fplot)

# Example 35
add_executable(variable_point_size_3d_example variable_point_size_3d_example.f90)
target_link_libraries(variable_point_size_3d_example fplot)

# Example 36
add_executable(correlation_plot_example correlation_plot_example.f90)
target_link_libraries(correlation_plot_example fplot)

# Example 37
add_executable(margins_example margins_example.f90)
target_link_libraries(margins_example fplot)
