examples = [
  ['fplot_2d_1','fplot_2d_1.f90'],
  ['fplot_2d_2','fplot_2d_2.f90'],
  ['fplot_2d_3','fplot_2d_3.f90'],
  ['fplot_2d_4','fplot_2d_4.f90'],
  ['fplot_2d_5','fplot_2d_5.f90'],
  ['fplot_2d_6','fplot_2d_6.f90'],
  ['fplot_2d_7','fplot_2d_7.f90'],
  ['fplot_2d_8','fplot_2d_8.f90'],
  ['fplot_2d_9','fplot_2d_9.f90'],
  ['fplot_2d_clr_1','fplot_2d_clr_1.f90'],
  ['fplot_3d_1','fplot_3d_1.f90'],
  ['fplot_3d_clr_1','fplot_3d_clr_1.f90'],
  ['fplot_clear_1','fplot_clear_1.f90'],
  ['fplot_d2d_1','fplot_d2d_1.f90'],
  ['fplot_d2d_2','fplot_d2d_2.f90'],
  ['fplot_err_1','fplot_err_1.f90'],
  ['fplot_fill_1','fplot_fill_1.f90'],
  ['fplot_fill_2','fplot_fill_2.f90'],
  ['fplot_log_1','fplot_log_1.f90'],
  ['fplot_multi_1','fplot_multi_1.f90'],
  ['fplot_multi_2','fplot_multi_2.f90'],
  ['fplot_multi_3','fplot_multi_3.f90'],
  ['fplot_png_1','fplot_png_1.f90'],
  ['fplot_polar_1','fplot_polar_1.f90'],
  ['fplot_surf_1','fplot_surf_1.f90'],
  ['fplot_surf_2','fplot_surf_2.f90'],
  ['fplot_surf_3','fplot_surf_3.f90'],
  ['fplot_tri_surf_1','fplot_tri_surf_1.f90'],
  ['fplot_vector_1','fplot_vector_1.f90'],
  ['fplot_vector_2','fplot_vector_2.f90']
  ]

foreach example : examples
  executable(example[0], example[1],
    dependencies: fplot_dep)
endforeach
