sources = files(
'fplot_axis.f90',
'fplot_colormap.f90',
'fplot_colors.f90',
'fplot_core.f90',
'fplot_core_routines.f90',
'fplot_delaunay.f90',
'fplot_delaunay_tri_surface.f90',
'fplot_errors.f90',
'fplot_filled_plot_data.f90',
'fplot_label.f90',
'fplot_latex_terminal.f90',
'fplot_legend.f90',
'fplot_multiplot.f90',
'fplot_plot_2d.f90',
'fplot_plot_3d.f90',
'fplot_plot_axis.f90',
'fplot_plot_bar.f90',
'fplot_plot_data_2d.f90',
'fplot_plot_data_3d.f90',
'fplot_plot_data_bar.f90',
'fplot_plot_data_colored.f90',
'fplot_plot_data_error_bars.f90',
'fplot_plot_data.f90',
'fplot_plot_data_histogram.f90',
'fplot_plot_data_tri_2d.f90',
'fplot_plot.f90',
'fplot_plot_polar.f90',
'fplot_png_terminal.f90',
'fplot_qt_terminal.f90',
'fplot_scatter_plot_data.f90',
'fplot_simplify.f90',
'fplot_surface_plot_data.f90',
'fplot_surface_plot.f90',
'fplot_terminal.f90',
'fplot_tri_surface_plot_data.f90',
'fplot_vector_field_plot_data.f90',
'fplot_windows_terminal.f90',
'fplot_wxt_terminal.f90',
'geompack.f',
'tripack.f',
  )
